took far too long to fix the button

--- a/css/index.css
+++ b/css/index.css
@@ -232,17 +232,33 @@ footer {
 .home .walk .walk-text {
   width: 50%;
 }
-.home .walk .walk-text h3 {
+.home .walk h3 {
   margin-bottom: 10px;
 }
-.home .walk .walk-text p {
+.home .walk p {
   margin-bottom: 26px;
+}
+.home .walk .btn {
+  display: block;
+  background-color: black;
+  width: 200px;
+  height: 45px;
+  font-size: 2rem;
+  border-radius: 0.8rem;
+  color: white;
+  text-align: center;
+  padding: auto 0;
+  margin: auto 0;
+}
+.home .walk .btn:hover {
+  color: black;
+  background-color: white;
 }
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
 }
-.home .walk .walk-img img {
+.home .walk img {
   width: 100%;
   height: auto;
   border-radius: 10px;
