--- a/less/home-page.less
+++ b/less/home-page.less
@@ -48,6 +48,7 @@
 
     .walk-text {
       width: 50%;
+    }
 
       h3 {
         margin-bottom: 10px;
@@ -57,19 +58,21 @@
         margin-bottom: 26px;
       }
 
-      .btn {
-      }
-    }
+    .btn {
+      .btnmixin ();
+      
+    }  
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      
+    }
+    
       img {
         width: 100%;
         height: auto;
         border-radius: 10px;
       }
-    }
+    
   }
-}// home
+}// home //
